Can delete rows

--- a/Grid.html
+++ b/Grid.html
@@ -3,7 +3,11 @@
 <html>
     <script src="pixel.js"></script>
     <style src="stlye.css"></style>
-    <button id="addRow" onclick="addRow()">AddRow</button>
+    <p>ROWS
+        <button id="addRow" onclick="addRow()">+</button>
+        <button id="deleteRow" onclick="deleteRow()">-</button>
+    </p>
+    
     <body>
         <table id="table">
         </table>
