--- a/Grid.html
+++ b/Grid.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-    <script src="pixel.js"></script>
-    <style src="stlye.css"></style>
-    <p>ROWS
-        <button id="addRow" onclick="addRow()">+</button>
-        <button id="deleteRow" onclick="deleteRow()">-</button>
-    </p>
+    <head>
+        <script src="pixel.js"></script>
+        <link rel="stylesheet" href="style.css">
+    </head>
     
     <body>
+
+        <p>ROWS
+            <button id="addRow" onclick="addRow()">+</button>
+            <button id="deleteRow" onclick="deleteRow()">-</button>
+        </p>
+    
         <table id="table">
         </table>
     </body>
