column works, row fails

--- a/Grid.html
+++ b/Grid.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 
 <html>
-    <script src="pixel.js"></script>
-    <style src="stlye.css"></style>
-    <button id="addRow" onclick="addRow()">AddRow</button>
-    <body>
-        <table id="table">
-        </table>
-    </body>
-</html>
+<script src="pixel.js"></script>
+<style src="stlye.css"></style>
+<button id="addRow" onclick="addRow()">AddRow</button>
+<button id="addColumn" onclick="addColumn()">Add Column</button>
 
+<body>
+    <table id="table">
+    </table>
+</body>
+
+</html>
