Rows and columns working

--- a/Grid.html
+++ b/Grid.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-<script src="pixel.js"></script>
-<style src="stlye.css"></style>
+    <head>
+        <script src="pixel.js"></script>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <button id="addRow" onclick="addRow()">AddRow</button>
 <button id="addColumn" onclick="addColumn()">Add Column</button>
 
