Rows and columns working

--- a/Grid.html
+++ b/Grid.html
@@ -5,14 +5,6 @@
         <script src="pixel.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
-<button id="addRow" onclick="addRow()">AddRow</button>
-<button id="addColumn" onclick="addColumn()">Add Column</button>
-
-<head>
-    <script src="pixel.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-
 <body>
 
     <p>ROWS
@@ -20,13 +12,11 @@
         <button id="deleteRow" onclick="deleteRow()">-</button>
     </p>
 
-    <table id="table">
-    </table>
-</body>
+    <p>COLUMNS
+        <button id="addColumn" onclick="addColumn()">+</button>
+        <button id="deleteColumn" onclick="deleteColumn()">-</button>
+    </p>
 
-</html>
-
-<body>
     <table id="table">
     </table>
 </body>
