click on cell to change to static color works

--- a/Grid.html
+++ b/Grid.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <script src="pixel.js"></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
+
+<head>
+    <script src="pixel.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
     <p>ROWS
@@ -20,5 +22,20 @@
     <table id="table">
     </table>
 </body>
+
+<script>
+
+    //let cells = Array.prototype.slice.call(document.getElementsByTagName("TD"));
+    // let cells = document.getElementsByTagName("TD");
+    // console.log(cells);
+    // for (i in cells) {
+    //     for (y in i) {
+    //         cells[y].addEventListener("click", function () { cells[i].style.bgColor("Green") });
+    //     }
+    // }
+
+
+</script>
+
 
 </html>
