Can hover but must fix

--- a/Grid.html
+++ b/Grid.html
@@ -21,6 +21,10 @@
 
     <table id="table">
     </table>
+
+    <button id="resetCells" onclick="restoreCellsToOriginalColor()">Restore Cells</button>
+    <button id="fillCells" onclick="fillCellsWithSelectedColor()">Fill Cells</button>
+
 </body>
 
 <script>
