--- a/Grid.html
+++ b/Grid.html
@@ -19,6 +19,13 @@
         <button id="deleteColumn" onclick="deleteColumn()">-</button>
     </p>
 
+    <select id="Colors">  <!--Call run() function-->
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="yellow">Yellow</option>
+        <option value="green">Green</option>
+   </select><br><br>
+
     <table id="table">
     </table>
 
