fill in uncolored cells

--- a/Grid.html
+++ b/Grid.html
@@ -31,6 +31,7 @@
 
     <button id="resetCells" onclick="restoreCellsToOriginalColor()">Restore Cells</button>
     <button id="fillCells" onclick="fillCellsWithSelectedColor()">Fill Cells</button>
+    <button id="fillUncoloredCells" onclick="fillUncoloredCellsWithSelectedColor()">Fill Uncolored Cells</button>
 
 </body>
 
